# subjective-logic

./: Cargo.toml  LICENSE  README.md  index.html  katex.html
.cargo/: config.toml
.github/workflows/: rust.yml
src/: approx_ext.rs  bi.rs  convert.rs  domain.rs  errors.rs  iter.rs  lib.rs  main.rs  mul.rs  multi_array.rs  ops.rs
src/mul/: labeled.rs  non_labeled.rs  op.rs  prod.rs
src/multi_array/: labeled.rs  non_labeled.rs
