[package]
name = "subjective-logic"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.12"
thiserror = "1.0.40"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex.html"]
